syntax = "proto3";
package pb;

import "dom/briscola/pb/compare.proto";
import "dom/briscola/pb/count.proto";
import "dom/briscola/pb/points.proto";

service Briscola {
    rpc CardPoints(CardPointsRequest) returns (CardPointsResponse) {}
    rpc PointCount(PointCountRequest) returns (PointCountResponse) {}
    rpc CardCompare(CardCompareRequest) returns (CardCompareResponse) {}
}